<?xml version="1.0" encoding="utf-8"?>
<android.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#eeeeef"
    android:elevation="4dp"
    app:titleTextColor="#262626">

    <ImageButton
        android:id="@+id/closeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="5dp"
        android:src="@drawable/ic_clear_24px"
        android:layout_gravity="start"
        android:background="#eeeeef"
        android:contentDescription="@string/close_button" />

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="#eeeeef"
        android:contentDescription="@string/back_button"
        android:paddingRight="10dp"
        android:src="@drawable/prev" />

    <ImageButton
        android:id="@+id/forwardButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="#eeeeef"
        android:contentDescription="@string/forward_button"
        android:paddingRight="10dp"
        android:src="@drawable/next" />

    <ImageButton
        android:id="@+id/downloadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:background="#eeeeef"
        android:contentDescription="@string/download_button"
        android:paddingRight="10dp"
        android:src="@drawable/download_enabled"
        android:scaleType="fitCenter"
        />
    
    <ImageButton
        android:id="@+id/reloadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="#eeeeef"
        android:paddingRight="10dp"
        android:contentDescription="@string/reload_button"
        android:src="@drawable/ic_refresh"
        android:visibility="gone" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/title"
        android:maxLines="5"
        android:ellipsize="end"
        android:singleLine="false"
        android:textColor="#262626" />

    <!-- <ImageButton
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="#eeeeef"
        android:contentDescription="@string/share_button"
        android:paddingRight="10dp"
        android:src="@drawable/share_svg"
        android:visibility="visible"
         /> -->

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="@drawable/button_background"
        android:text="Button Text"
        android:layout_marginRight="10dp"
        android:layout_marginTop="3dp"
        android:layout_marginBottom="3dp"
        android:textColor="#FFFFFF"
        android:padding="12dp"
        android:textSize="16sp"/>
</android.widget.Toolbar>
